@@ -403,7 +403,7 @@ public class TestInstant_Basics extends TestCase {
         assertSame(DateTime.class, result.getClass());
         assertSame(ISOChronology.class, result.getChronology().getClass());
         assertEquals(test.getMillis(), result.getMillis());
-        assertEquals(ISOChronology.getInstance(), result.getChronology());
+        assertEquals(ISOChronology.getInstanceUTC(), result.getChronology());
     }
 
     public void testToDateTime_DateTimeZone() {
@@ -443,7 +443,7 @@ public class TestInstant_Basics extends TestCase {
         Instant test = new Instant(TEST_TIME1);
         MutableDateTime result = test.toMutableDateTime();
         assertEquals(test.getMillis(), result.getMillis());
-        assertEquals(ISOChronology.getInstance(), result.getChronology());
+        assertEquals(ISOChronology.getInstanceUTC(), result.getChronology());
     }
 
     public void testToMutableDateTimeISO() {
@@ -452,7 +452,7 @@ public class TestInstant_Basics extends TestCase {
         assertSame(MutableDateTime.class, result.getClass());
         assertSame(ISOChronology.class, result.getChronology().getClass());
         assertEquals(test.getMillis(), result.getMillis());
-        assertEquals(ISOChronology.getInstance(), result.getChronology());
+        assertEquals(ISOChronology.getInstanceUTC(), result.getChronology());
     }
 
     public void testToMutableDateTime_DateTimeZone() {
